# espidf-gps-logger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gitupdate.sh  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3  sdkconfig.esp32dev  sdkconfig.esp32devdebug  sdkconfig.esp32s3  sdkconfig.esp32s3debug  sdkconfig.ok  sdkconfig.old  sdkconfig.s3.ok  two_ota_large.csv  two_ota_large_s3.csv
flash_data/: config.txt  default.json
flash_data_s3/: config.txt
flash_data_s3/www/: index.html  main.d45077ec.js  main.e0703e50.css  runtime.f5c1b22c.js  vendors.3f112f6d.js  vendors.3f112f6d.js.LICENSE.txt
main/: CMakeLists.txt  Kconfig  bmx.c  bmx.h  display.h  dstat_screens.c  dstat_screens.h  epaper.c  gui.c  https_ota.c  https_ota.h  idf_component.yml  lcd.c  lcd.h  main.c  private.h
web-frontend/: babel.config.js  nuxt.config.js  package.json  vue.config.js  webpack.config.js
web-frontend/public/: index.html
web-frontend/src/: App.vue  main.js
web-frontend/src/components/: AppNavigation.vue  Config.vue  FileList.vue
web-frontend/src/plugins/: vuetify.js
web-frontend/src/router/: index.js
web-frontend/src/service/: api-client.js
web-frontend/src/store/: index.js
web-frontend/src/views/: Config.vue  Files.vue  FirmwareUpdate.vue  Home.vue  Login.vue
